# dissention

./: .gitignore  Makefile  README.md  pyproject.toml
dissent/: __init__.py  config.py  dataset.py  features.py  plots.py
dissent/modeling/: analysis.py  emi.py  emi_predict_colexification.py  predict.py  train.py  word2vec_predict.py  word2vec_train.py
docs/: mkdocs.yml
docs/docs/: getting-started.md  index.md
experiments/: lbertopic.py  test-plotly.py
reports/: article.md  bib.bib
